test/fixtures/configs/pages/post/fail/payload/xy.js
exports.duplicateCoords = {
  url: '/users/1/projects/2/pages',
  method: 'post',
  headers: {
    authorization: 'token userToken'
  },
  payload: {
    x:0,
    y:0
  }
};
